--- a/demo/index.html
+++ b/demo/index.html
@@ -24,6 +24,7 @@
   <link rel="import" href="../../paper-styles/default-theme.html">
   <link rel="import" href="../vaadin-text-field.html">
   <link rel="import" href="../vaadin-password-field.html">
+  <link rel="import" href="../vaadin-text-area.html">
   <link rel="import" href="../../iron-form/iron-form.html">
 
   <vaadin-component-demo config-src="demos.json"></vaadin-component-demo>
