--- a/test/accessibility.html
+++ b/test/accessibility.html
@@ -6,165 +6,193 @@
 
   <script src="../../web-component-tester/browser.js"></script>
   <link rel="import" href="../vaadin-text-field.html">
+  <link rel="import" href="../vaadin-text-area.html">
 
 </head>
 
 <body>
-  <test-fixture id="default">
+  <test-fixture id="vaadin-text-field-default">
     <template>
       <vaadin-text-field></vaadin-text-field>
     </template>
   </test-fixture>
 
-  <test-fixture id="error-fixture">
+  <test-fixture id="vaadin-text-field-error-fixture">
     <template>
       <vaadin-text-field required error-message="ERR"></vaadin-text-field>
     </template>
   </test-fixture>
 
-  <test-fixture id="invalid-fixture">
+  <test-fixture id="vaadin-text-field-invalid-fixture">
     <template>
       <vaadin-text-field invalid error-message="ERR"></vaadin-text-field>
     </template>
   </test-fixture>
 
-  <test-fixture id="multiple-fields">
+  <test-fixture id="vaadin-text-field-multiple-fields">
     <template>
       <vaadin-text-field></vaadin-text-field>
       <vaadin-text-field></vaadin-text-field>
     </template>
   </test-fixture>
 
+  <test-fixture id="vaadin-text-area-default">
+      <template>
+        <vaadin-text-area></vaadin-text-area>
+      </template>
+    </test-fixture>
+  
+    <test-fixture id="vaadin-text-area-error-fixture">
+      <template>
+        <vaadin-text-area required error-message="ERR"></vaadin-text-area>
+      </template>
+    </test-fixture>
+  
+    <test-fixture id="vaadin-text-area-invalid-fixture">
+      <template>
+        <vaadin-text-area invalid error-message="ERR"></vaadin-text-area>
+      </template>
+    </test-fixture>
+  
+    <test-fixture id="vaadin-text-area-multiple-fields">
+      <template>
+        <vaadin-text-area></vaadin-text-area>
+        <vaadin-text-area></vaadin-text-field>
+      </template>
+    </test-fixture>
+
   <script>
+    ['vaadin-text-field', 'vaadin-text-area'].forEach(el => {
+      describe(`${el}: accessibility`, function() {
 
-    describe('accessibility', function() {
+        describe('default', function() {
+          let tf, label, input;
 
-      describe('default', function() {
-        let tf, label, input;
+          beforeEach(function() {
+            tf = fixture(`${el}-default`);
+            input = tf.focusElement;
+            label = tf.root.querySelector('[part=label]');
+          });
 
-        beforeEach(function() {
-          tf = fixture('default');
-          input = tf.focusElement;
-          label = tf.root.querySelector('[part=label]');
+          it('should label the input', function() {
+            tf.label = 'foo';
+            expect(input.getAttribute('aria-labelledby')).to.equal(label.id);
+          });
+
+          it('should not label the input', function() {
+            expect(input.hasAttribute('aria-labelledby')).to.be.false;
+          });
+
+          it('should not be marked required', function() {
+            expect(input.hasAttribute('aria-required')).to.be.false;
+          });
+
+          it('should be marked required', function() {
+            tf.required = true;
+            expect(input.hasAttribute('aria-required')).to.be.true;
+          });
+
+          it('should not be marked readonly', function() {
+            expect(input.hasAttribute('aria-readonly')).to.be.false;
+          });
+
+          it('should be marked readonly', function() {
+            tf.readonly = true;
+            expect(input.hasAttribute('aria-readonly')).to.be.true;
+          });
+
         });
 
-        it('should label the input', function() {
-          tf.label = 'foo';
-          expect(input.getAttribute('aria-labelledby')).to.equal(label.id);
+        describe('error', function() {
+          let tf, err, input;
+
+          beforeEach(function() {
+            tf = fixture(`${el}-error-fixture`);
+            input = tf.focusElement;
+            err = tf.root.querySelector('[part=error-message]');
+          });
+
+          it('should have an error element', function() {
+            expect(err).to.be.ok;
+          });
+
+          it('should not show the error message initially', function() {
+            expect(window.getComputedStyle(err).display).to.equal('none');
+          });
+
+          it('should show the error message after validation is run', function() {
+            tf.validate();
+            expect(window.getComputedStyle(err).display).not.to.equal('none');
+          });
+
+          it('should not show the error message if error-message is empty', function() {
+            tf.errorMessage = '';
+            tf.validate();
+            expect(window.getComputedStyle(err).display).to.equal('none');
+          });
+
+          it('should not have aria-describedby attribute if valid', function() {
+            expect(input.hasAttribute('aria-describedby')).to.be.false;
+          });
+
+          it('should have aria-describedby attribute when invalid', function() {
+            tf.validate();
+            expect(input.getAttribute('aria-describedby')).to.equal(err.id);
+          });
+
+          it('should have appropriate aria-live attribute', function() {
+            expect(err.getAttribute('aria-live')).to.equal('assertive');
+          });
+
         });
 
-        it('should not label the input', function() {
-          expect(input.hasAttribute('aria-labelledby')).to.be.false;
+        describe('invalid', function() {
+          let tf, err, input;
+
+          beforeEach(function() {
+            tf = fixture(`${el}-invalid-fixture`);
+            err = tf.root.querySelector('[part=error-message]');
+            input = tf.focusElement;
+          });
+
+          it('should show the error if initially invalid', function() {
+            expect(window.getComputedStyle(err).display).not.to.equal('none');
+          });
+
+          it('should be marked invalid', function() {
+            expect(input.hasAttribute('aria-invalid')).to.be.true;
+          });
+
+          it('should not be marked invalid', function() {
+            tf.invalid = false;
+            expect(input.hasAttribute('aria-invalid')).to.be.false;
+          });
+
         });
 
-        it('should not be marked required', function() {
-          expect(input.hasAttribute('aria-required')).to.be.false;
-        });
+        describe('multiple fields', function() {
+          let fields;
 
-        it('should be marked required', function() {
-          tf.required = true;
-          expect(input.hasAttribute('aria-required')).to.be.true;
-        });
+          beforeEach(function() {
+            fields = fixture(`${el}-multiple-fields`);
+          });
 
-        it('should not be marked readonly', function() {
-          expect(input.hasAttribute('aria-readonly')).to.be.false;
-        });
+          it('should have unique error identifiers', function() {
+            var err0 = fields[0].root.querySelector('[part=error-message]');
+            var err1 = fields[1].root.querySelector('[part=error-message]');
+            expect(err0.id).not.to.equal(err1.id);
+          });
 
-        it('should be marked readonly', function() {
-          tf.readonly = true;
-          expect(input.hasAttribute('aria-readonly')).to.be.true;
+          it('should have unique label identifiers', function() {
+            var label0 = fields[0].root.querySelector('[part=label]');
+            var label1 = fields[1].root.querySelector('[part=label]');
+            expect(label0.id).not.to.equal(label1.id);
+          });
+
         });
 
       });
-
-      describe('error', function() {
-        let tf, err, input;
-
-        beforeEach(function() {
-          tf = fixture('error-fixture');
-          input = tf.focusElement;
-          err = tf.root.querySelector('[part=error-message]');
-        });
-
-        it('should have an error element', function() {
-          expect(err).to.be.ok;
-        });
-
-        it('should not show the error message initially', function() {
-          expect(window.getComputedStyle(err).display).to.equal('none');
-        });
-
-        it('should show the error message after validation is run', function() {
-          tf.validate();
-          expect(window.getComputedStyle(err).display).not.to.equal('none');
-        });
-
-        it('should not show the error message if error-message is empty', function() {
-          tf.errorMessage = '';
-          tf.validate();
-          expect(window.getComputedStyle(err).display).to.equal('none');
-        });
-
-        it('should not have aria-describedby attribute if valid', function() {
-          expect(input.hasAttribute('aria-describedby')).to.be.false;
-        });
-
-        it('should have aria-describedby attribute when invalid', function() {
-          tf.validate();
-          expect(input.getAttribute('aria-describedby')).to.equal(err.id);
-        });
-
-        it('should have appropriate aria-live attribute', function() {
-          expect(err.getAttribute('aria-live')).to.equal('assertive');
-        });
-
-      });
-
-      describe('invalid', function() {
-        let tf, err, input;
-
-        beforeEach(function() {
-          tf = fixture('invalid-fixture');
-          err = tf.root.querySelector('[part=error-message]');
-          input = tf.focusElement;
-        });
-
-        it('should show the error if initially invalid', function() {
-          expect(window.getComputedStyle(err).display).not.to.equal('none');
-        });
-
-        it('should be marked invalid', function() {
-          expect(input.hasAttribute('aria-invalid')).to.be.true;
-        });
-
-        it('should not be marked invalid', function() {
-          tf.invalid = false;
-          expect(input.hasAttribute('aria-invalid')).to.be.false;
-        });
-
-      });
-
-      describe('multiple fields', function() {
-        let fields;
-
-        beforeEach(function() {
-          fields = fixture('multiple-fields');
-        });
-
-        it('should have unique error identifiers', function() {
-          var err0 = fields[0].root.querySelector('[part=error-message]');
-          var err1 = fields[1].root.querySelector('[part=error-message]');
-          expect(err0.id).not.to.equal(err1.id);
-        });
-
-        it('should have unique label identifiers', function() {
-          var label0 = fields[0].root.querySelector('[part=label]');
-          var label1 = fields[1].root.querySelector('[part=label]');
-          expect(label0.id).not.to.equal(label1.id);
-        });
-
-      });
-
     });
+    
   </script>
 </body>
