--- a/test/index.html
+++ b/test/index.html
@@ -14,6 +14,7 @@
 
     WCT.loadSuites([
       'text-field.html',
+      'text-area.html',
       'password-field.html',
       'validation.html',
       'accessibility.html'
