Add vaadin-text-area, vaadin-text-field-mixin, vaadin-text-field-styles

--- a/test/visual/common.html
+++ b/test/visual/common.html
@@ -1,4 +1,4 @@
-<dom-module id="text-field-styles" theme-for="vaadin-text-field">
+<dom-module id="text-field-styles" theme-for="vaadin-text-field vaadin-text-area">
   <template>
     <style include="vaadin-text-field-default-theme">
 
