Add hidden attribute styles

--- a/vaadin-text-field.html
+++ b/vaadin-text-field.html
@@ -64,6 +64,10 @@ This program is available under Apache License Version 2.0, available at https:/
         outline: none;
       }
 
+      :host([hidden]) {
+        display: none !important;
+      }
+
       .vaadin-text-field-container {
         display: flex;
         flex-direction: column;
